--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ button {
 .counter {
     position: relative;
     transform: scale(0.5);
-    transition: .4s;
+    transition: transform .4s;
 }
 .best-score {
     position: absolute;
@@ -218,9 +218,6 @@ button {
     width: 115px; 
     transform: scale(1.3); 
     z-index: 2;
-}
-.runRune:hover.runRune::after {
-    box-shadow: 0px 0px 20px 20px rgba(24, 24, 24, 0.5);
 }
 .runRune::before {
     content: attr(data-text);
@@ -245,7 +242,6 @@ button {
     border-radius: 50%;
     color: white;
     background-color: #232323;
-    transition: .4s;
     z-index: -1;
 }
 /**/
